--- a/notebooks/03_train_whisper_ewe.ipynb
+++ b/notebooks/03_train_whisper_ewe.ipynb
@@ -14,7 +14,12 @@
    "id": "5b26b6cf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "if str(Path.cwd().parent) not in sys.path:\n",
+    "    sys.path.append(str(Path.cwd().parent))\n"
+   ]
   }
  ],
  "metadata": {
