Update scraping ewe et gegbe

--- a/notebooks/02_prepare_asr_dataset.ipynb
+++ b/notebooks/02_prepare_asr_dataset.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "### Contexte général\n",
-    "Préparation des données ASR en langue Ewe\n",
+    "Préparation des données ASR en langues Éwé et Gegbe\n",
     "\n",
     "Ce notebook décrit et exécute l'ensemble des étapes nécessaires\n",
     "pour transformer les données brutes collectées (audio + texte)\n",
@@ -70,11 +70,14 @@
     }
    ],
    "source": [
-    "from src.config.settings import AUDIO_DIR, TEXT_DIR, META_DIR\n",
+    "from src.config.settings import EWE_RAW_DIR, GEGBE_RAW_DIR, META_DIR\n",
     "\n",
-    "print(\"Audio RAW :\", len(list(AUDIO_DIR.glob(\"*.mp3\"))))\n",
-    "print(\"Textes RAW :\", len(list(TEXT_DIR.glob(\"*.txt\"))))\n",
-    "print(\"Métadonnées :\", META_DIR.exists())\n"
+    "ewe_audio = EWE_RAW_DIR / \"audio\"\n",
+    "gegbe_audio = GEGBE_RAW_DIR / \"audio\"\n",
+    "\n",
+    "print(\"Audio RAW Éwé :\", len(list(ewe_audio.glob(\"*.mp3\"))) if ewe_audio.exists() else 0)\n",
+    "print(\"Audio RAW Gegbe :\", len(list(gegbe_audio.glob(\"*.mp3\"))) if gegbe_audio.exists() else 0)\n",
+    "print(\"Métadonnées :\", META_DIR.exists())"
    ]
   },
   {
@@ -193,10 +196,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.config.settings import TEXT_DIR\n",
+    "from src.config.settings import EWE_RAW_DIR\n",
     "\n",
-    "raw_example = next(TEXT_DIR.glob(\"*.txt\"))\n",
-    "print(\"TEXTE BRUT:\\n\", raw_example.read_text(encoding=\"utf-8\")[:300])\n"
+    "raw_example = next((EWE_RAW_DIR / \"texts\").glob(\"*.txt\"))\n",
+    "print(\"TEXTE BRUT:\\n\", raw_example.read_text(encoding=\"utf-8\")[:300])"
    ]
   },
   {
@@ -276,7 +279,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "dataset_path = PROJECT_ROOT / \"data\" / \"processed\" / \"ewe_asr_dataset.csv\"\n",
+    "dataset_path = PROJECT_ROOT / \"data\" / \"processed\" / \"bible_asr_dataset.csv\"\n",
     "df = pd.read_csv(dataset_path)\n",
     "\n",
     "df.head()\n"
