Update scraping ewe et gegbe

--- a/notebooks/02_prepare_asr_dataset.ipynb
+++ b/notebooks/02_prepare_asr_dataset.ipynb
@@ -1,350 +1,178 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "62dcf89c",
-   "metadata": {},
-   "source": [
-    "Membres du groupe \n",
-    "- AFOMALE David\n",
-    "- DOGBO Sarah\n",
-    "- BOTRE Aboudou\n",
-    "- TEPE Paulin\n",
-    "- NOYOULIWA Victoire"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "486ea55c",
-   "metadata": {},
-   "source": [
-    "### Contexte général\n",
-    "Préparation des données ASR en langues Éwé et Gegbe\n",
-    "\n",
-    "Ce notebook décrit et exécute l'ensemble des étapes nécessaires\n",
-    "pour transformer les données brutes collectées (audio + texte)\n",
-    "en un dataset utilisable pour l'entraînement ou l'évaluation\n",
-    "d'un modèle de reconnaissance automatique de la parole (ASR).\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "821d1e9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "from pathlib import Path\n",
-    "if str(Path.cwd().parent) not in sys.path:\n",
-    "    sys.path.append(str(Path.cwd().parent))\n",
-    "from pathlib import Path\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9399731",
-   "metadata": {},
-   "source": [
-    "**Vérification de la structure du projet s’assurer que les données RAW existent avant processing.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4a8d584b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconfig\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msettings\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AUDIO_DIR, TEXT_DIR, META_DIR\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAudio RAW :\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mlist\u001b[39m(AUDIO_DIR.glob(\u001b[33m\"\u001b[39m\u001b[33m*.mp3\u001b[39m\u001b[33m\"\u001b[39m))))\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTextes RAW :\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mlist\u001b[39m(TEXT_DIR.glob(\u001b[33m\"\u001b[39m\u001b[33m*.txt\u001b[39m\u001b[33m\"\u001b[39m))))\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
-     ]
-    }
-   ],
-   "source": [
-    "from src.config.settings import EWE_RAW_DIR, GEGBE_RAW_DIR, META_DIR\n",
-    "\n",
-    "ewe_audio = EWE_RAW_DIR / \"audio\"\n",
-    "gegbe_audio = GEGBE_RAW_DIR / \"audio\"\n",
-    "\n",
-    "print(\"Audio RAW Éwé :\", len(list(ewe_audio.glob(\"*.mp3\"))) if ewe_audio.exists() else 0)\n",
-    "print(\"Audio RAW Gegbe :\", len(list(gegbe_audio.glob(\"*.mp3\"))) if gegbe_audio.exists() else 0)\n",
-    "print(\"Métadonnées :\", META_DIR.exists())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96e02e79",
-   "metadata": {},
-   "source": [
-    "Cette vérification permet de garantir que les données sources sont bien disponibles avant toute transformation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e4f36f0",
-   "metadata": {},
-   "source": [
-    "### Étape 1 : Processing audio\n",
-    "\n",
-    "Objectif méthodologique\n",
-    "\n",
-    "Standardiser tous les fichiers audio au format requis par les modèles ASR (WAV, mono, 16 kHz)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7e83699",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.preprocessing.audio_processing import convert_mp3_to_wav_16k\n",
-    "\n",
-    "convert_mp3_to_wav_16k()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c18495d8",
-   "metadata": {},
-   "source": [
-    "Explication :\n",
-    "\n",
-    "- Suppression des variations de fréquence d’échantillonnage\n",
-    "\n",
-    "- Format compatible Whisper / Wav2Vec2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a8b87944",
-   "metadata": {},
-   "source": [
-    "**Contrôle qualité audio**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b13e16f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.config.settings import PROJECT_ROOT\n",
-    "\n",
-    "processed_audio = PROJECT_ROOT / \"data\" / \"processed\" / \"audio_16k\"\n",
-    "len(list(processed_audio.glob(\"*.wav\")))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a453c79",
-   "metadata": {},
-   "source": [
-    "### Étape 2 : Nettoyage des transcriptions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8826c77c",
-   "metadata": {},
-   "source": [
-    "**Objectif méthodologique**\n",
-    "\n",
-    "Supprimer le bruit textuel (numéros de versets, espaces, caractères parasites)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1fbb3fe8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.preprocessing.text_cleaning import clean_all_texts\n",
-    "\n",
-    "clean_all_texts()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a23a223b",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d72c6751",
-   "metadata": {},
-   "source": [
-    "**Exemple avant / après nettoyage**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92cb5a00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.config.settings import EWE_RAW_DIR\n",
-    "\n",
-    "raw_example = next((EWE_RAW_DIR / \"texts\").glob(\"*.txt\"))\n",
-    "print(\"TEXTE BRUT:\\n\", raw_example.read_text(encoding=\"utf-8\")[:300])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dba4e1d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "processed_text_dir = PROJECT_ROOT / \"data\" / \"processed\" / \"transcripts\"\n",
-    "cleaned_example = next(processed_text_dir.glob(\"*.txt\"))\n",
-    "print(\"TEXTE NETTOYÉ:\\n\", cleaned_example.read_text(encoding=\"utf-8\")[:300])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6139d7b",
-   "metadata": {},
-   "source": [
-    "**Analyse :**\n",
-    "\n",
-    "Le nettoyage améliore la qualité linguistique des transcriptions, ce qui est essentiel pour l’apprentissage ASR."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aff6a60e",
-   "metadata": {},
-   "source": [
-    "### Étape 3 : Construction du dataset ASR"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "098c251b",
-   "metadata": {},
-   "source": [
-    "**Objectif méthodologique**\n",
-    "\n",
-    "Associer chaque fichier audio à sa transcription correspondante."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6d2b931",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.preprocessing.dataset_builder import build_asr_dataset\n",
-    "\n",
-    "build_asr_dataset()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1e1494d7",
-   "metadata": {},
-   "source": [
-    "### ---------------------------------------------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de29a730",
-   "metadata": {},
-   "source": [
-    "### Inspection du dataset final"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0831bc00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "dataset_path = PROJECT_ROOT / \"data\" / \"processed\" / \"bible_asr_dataset.csv\"\n",
-    "df = pd.read_csv(dataset_path)\n",
-    "\n",
-    "df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b47f8c24",
-   "metadata": {},
-   "source": [
-    "### Statistiques descriptives (méthodologie)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c42b6ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"duration_sec\"] = df[\"audio_filepath\"].apply(\n",
-    "    lambda p: Path(p)\n",
-    ")\n",
-    "\n",
-    "len(df)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "79d59fee",
-   "metadata": {},
-   "source": [
-    "**Interpretation :**\n",
-    "\n",
-    "- Nombre total d’exemples ASR\n",
-    "- Diversité textuelle\n",
-    "- Base suffisante pour évaluation / pré-entraînement"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f3c7f2b",
-   "metadata": {},
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "venv",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.14"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "id": "62dcf89c",
+            "metadata": {},
+            "source": [
+                "Membres du groupe \n",
+                "- AFOMALE David\n",
+                "- DOGBO Sarah\n",
+                "- BOTRE Aboudou\n",
+                "- TEPE Paulin\n",
+                "- NOYOULIWA Victoire"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "486ea55c",
+            "metadata": {},
+            "source": [
+                "### Contexte général\n",
+                "Préparation des données ASR en langues Éwé et Gegbe\n",
+                "\n",
+                "Ce notebook décrit et exécute l'ensemble des étapes nécessaires\n",
+                "pour transformer les données brutes collectées (audio + texte)\n",
+                "en un dataset utilisable pour l'entraînement ou l'évaluation\n",
+                "d'un modèle de reconnaissance automatique de la parole (ASR).\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 1,
+            "id": "821d1e9a",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import sys\n",
+                "from pathlib import Path\n",
+                "if str(Path.cwd().parent) not in sys.path:\n",
+                "    sys.path.append(str(Path.cwd().parent))\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "f9399731",
+            "metadata": {},
+            "source": [
+                "**Vérification de la structure du projet : s’assurer que les données RAW existent avant le processing.**"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "4a8d584b",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from src.config.settings import EWE_RAW_DIR, GEGBE_RAW_DIR\n",
+                "\n",
+                "ewe_audio = EWE_RAW_DIR / \"audio\"\n",
+                "gegbe_audio = GEGBE_RAW_DIR / \"audio\"\n",
+                "\n",
+                "print(\"Audio RAW Éwé :\", len(list(ewe_audio.glob(\"*.mp3\"))) if ewe_audio.exists() else 0)\n",
+                "print(\"Audio RAW Gegbe :\", len(list(gegbe_audio.glob(\"*.mp3\"))) if gegbe_audio.exists() else 0)\n",
+                "print(\"Métadonnées Éwé :\", (EWE_RAW_DIR / \"metadata\" / \"ewe_bible_raw.json\").exists())\n",
+                "print(\"Métadonnées Gegbe :\", (GEGBE_RAW_DIR / \"metadata\" / \"gegbe_bible_raw.json\").exists())"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "96e02e79",
+            "metadata": {},
+            "source": [
+                "### Étape 1 : Processing audio\n",
+                "\n",
+                "Objectif : Standardiser tous les fichiers audio (WAV, mono, 16 kHz)."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "c7e83699",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from src.preprocessing.audio_processing import convert_mp3_to_wav_16k\n",
+                "\n",
+                "print(\"Conversion des audios Éwé...\")\n",
+                "convert_mp3_to_wav_16k(lang=\"ewe\")\n",
+                "\n",
+                "print(\"Conversion des audios Gegbe...\")\n",
+                "convert_mp3_to_wav_16k(lang=\"gegbe\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "1a453c79",
+            "metadata": {},
+            "source": [
+                "### Étape 2 : Nettoyage des transcriptions"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "1fbb3fe8",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from src.preprocessing.text_cleaning import clean_all_texts\n",
+                "\n",
+                "print(\"Nettoyage des textes...\")\n",
+                "clean_all_texts()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "aff6a60e",
+            "metadata": {},
+            "source": [
+                "### Étape 3 : Construction du dataset ASR final"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "d6d2b931",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from src.preprocessing.dataset_builder import build_asr_dataset\n",
+                "\n",
+                "print(\"Génération du fichier CSV pour l'entraînement...\")\n",
+                "build_asr_dataset()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "de29a730",
+            "metadata": {},
+            "source": [
+                "### Inspection du dataset final"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "0831bc00",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import pandas as pd\n",
+                "from src.config.settings import PROCESSED_DIR\n",
+                "\n",
+                "dataset_path = PROCESSED_DIR / \"bible_asr_dataset.csv\"\n",
+                "if dataset_path.exists():\n",
+                "    df = pd.read_csv(dataset_path)\n",
+                "    print(f\"Dataset chargé avec {len(df)} entrées.\")\n",
+                "    display(df.head())\n",
+                "else:\n",
+                "    print(\"Dataset non trouvé.\")"
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "venv",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "name": "python",
+            "version": "3.11.14"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 5
 }
