--- a/notebooks/03_train_whisper_ewe.ipynb
+++ b/notebooks/03_train_whisper_ewe.ipynb
@@ -1,38 +1,109 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "d18cb3d5",
-   "metadata": {},
-   "source": [
-    "### Notebook pour entrainer ou fine tuner notre model sur nos données"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b26b6cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "from pathlib import Path\n",
-    "if str(Path.cwd().parent) not in sys.path:\n",
-    "    sys.path.append(str(Path.cwd().parent))\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "venv",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.14"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "id": "d18cb3d5",
+            "metadata": {},
+            "source": [
+                "# Étape 3 : Entraînement et Test de la Cascade de Traduction\n",
+                "\n",
+                "Ce notebook permet de lancer l'entraînement ASR (Speech-to-Text) sur CPU et de tester la chaîne de traduction finale (Mina ➔ Éwé ➔ Français)."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "5b26b6cf",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import sys\n",
+                "from pathlib import Path\n",
+                "if str(Path.cwd().parent) not in sys.path:\n",
+                "    sys.path.append(str(Path.cwd().parent))\n",
+                "\n",
+                "import pandas as pd\n",
+                "from src.config import settings\n",
+                "from src.models.train_whisper_cpu import train_whisper_on_cpu\n",
+                "from src.pipeline.translate_cascade import TranslationCascade"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "a1",
+            "metadata": {},
+            "source": [
+                "## 1. Entraînement ASR (Whisper sur CPU)\n",
+                "\n",
+                "> **Note :** L'entraînement sur CPU est lent. Nous utilisons un gel des couches (freeze) à 90% pour accélérer le processus. Les hyperparamètres sont configurés dans `src/config/settings.py`."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "a2",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Chargement du dataset préparé à l'étape 2\n",
+                "dataset_path = settings.PROCESSED_DIR / \"bible_asr_dataset.csv\"\n",
+                "\n",
+                "if dataset_path.exists():\n",
+                "    df = pd.read_csv(dataset_path)\n",
+                "    print(f\"Dataset chargé : {len(df)} exemples.\")\n",
+                "    \n",
+                "    # Lancement de l'initialisation de l'entraînement\n",
+                "    # Note: assurez-vous d'avoir assez de RAM\n",
+                "    model, processor = train_whisper_on_cpu(None) # Remplacez None par votre dataset HuggingFace\n",
+                "else:\n",
+                "    print(\"Erreur : Le dataset ASR n'a pas encore été généré. Veuillez exécuter le notebook 02 d'abord.\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "a3",
+            "metadata": {},
+            "source": [
+                "## 2. Test de la Cascade de Traduction (Mina ➔ Éwé ➔ Français)\n",
+                "\n",
+                "Ici, nous testons la capacité du système à traduire du texte Mina vers le Français en passant par l'Éwé comme langue pivot."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "a4",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "cascade = TranslationCascade()\n",
+                "\n",
+                "test_phrases = [\n",
+                "    \"Egbé nyé gbe gba.\", \n",
+                "    \"Mose I 1:1\",\n",
+                "    \"Yesu fɛ̃ lɔlɔ̃.\"\n",
+                "]\n",
+                "\n",
+                "for phrase in test_phrases:\n",
+                "    print(\"\\n---\")\n",
+                "    result = cascade.translate_mina_to_french(phrase)\n",
+                "    print(f\"MINA : {result['mina']}\")\n",
+                "    print(f\"ÉWÉ  : {result['ewe']}\")\n",
+                "    print(f\"FR   : {result['french']}\")"
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "venv",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "name": "python",
+            "version": "3.11.14"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 5
 }
