Update notebook train whisper

--- a/notebooks/03_train_whisper_ewe.ipynb
+++ b/notebooks/03_train_whisper_ewe.ipynb
@@ -18,12 +18,15 @@
             "outputs": [],
             "source": [
                 "import sys\n",
+                "import importlib\n",
                 "from pathlib import Path\n",
                 "if str(Path.cwd().parent) not in sys.path:\n",
                 "    sys.path.append(str(Path.cwd().parent))\n",
                 "\n",
                 "import pandas as pd\n",
                 "from src.config import settings\n",
+                "import src.models.train_whisper_cpu\n",
+                "importlib.reload(src.models.train_whisper_cpu)\n",
                 "from src.models.train_whisper_cpu import train_whisper_on_cpu\n",
                 "from src.pipeline.translate_cascade import TranslationCascade"
             ]
@@ -35,7 +38,7 @@
             "source": [
                 "## 1. Entraînement ASR (Whisper sur CPU)\n",
                 "\n",
-                "> **Note :** L'entraînement sur CPU est lent. Nous utilisons un gel des couches (freeze) à 90% pour accélérer le processus. Les hyperparamètres sont configurés dans `src/config/settings.py`."
+                " (> **Note :** L'entraînement sur CPU est lent. Nous utilisons un gel des couches (freeze) à 90% pour accélérer le processus. Les hyperparamètres sont configurés dans `src/config/settings.py`."
             ]
         },
         {
