--- a/notebooks/03_train_whisper_ewe.ipynb
+++ b/notebooks/03_train_whisper_ewe.ipynb
@@ -12,19 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "5b26b6cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\EPL\\MTH2321\\MTH_2321_APEKE\\Projet_traduction_ewe_francais\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import importlib\n",
@@ -277,7 +268,7 @@
      "output_type": "stream",
      "text": [
       "INFO:src.pipeline.translate_cascade:Initialisation de la cascade de traduction...\n",
-      "INFO:src.models.translation_mina_ewe:Chargement du modèle Mina-Ewe : C:\\EPL\\MTH2321\\MTH_2321_APEKE\\Projet_traduction_ewe_francais\\models\\nllb-mina-ewe-local\n"
+      "INFO:src.models.translation_mina_ewe:Chargement du modèle Mina-Ewe : C:\\EPL\\MTH2321\\MTH_2321_APEKE\\Projet_traduction_ewe_francais\\models\\nllb-mina-ewe-final\n"
      ]
     },
     {
@@ -292,7 +283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The tokenizer you are loading from 'C:\\EPL\\MTH2321\\MTH_2321_APEKE\\Projet_traduction_ewe_francais\\models\\nllb-mina-ewe-local' with an incorrect regex pattern: https://huggingface.co/mistralai/Mistral-Small-3.1-24B-Instruct-2503/discussions/84#69121093e8b480e709447d5e. This will lead to incorrect tokenization. You should set the `fix_mistral_regex=True` flag when loading this tokenizer to fix this issue.\n",
+      "The tokenizer you are loading from 'C:\\EPL\\MTH2321\\MTH_2321_APEKE\\Projet_traduction_ewe_francais\\models\\nllb-mina-ewe-final' with an incorrect regex pattern: https://huggingface.co/mistralai/Mistral-Small-3.1-24B-Instruct-2503/discussions/84#69121093e8b480e709447d5e. This will lead to incorrect tokenization. You should set the `fix_mistral_regex=True` flag when loading this tokenizer to fix this issue.\n",
       "INFO:src.models.translation_ewe_fr:Chargement du modèle Transformers C:\\EPL\\MTH2321\\MTH_2321_APEKE\\Projet_traduction_ewe_francais\\models\\opus-ewe-fr-local\n"
      ]
     },
@@ -306,8 +297,8 @@
    ],
    "source": [
     "# Chemins locaux\n",
-    "asr_path = settings.PROJECT_ROOT / \"models\" / \"whisper-ewe-mina-final\"\n",
-    "nllb_path = settings.PROJECT_ROOT / \"models\" / \"nllb-mina-ewe-local\"\n",
+    "asr_path = settings.PROJECT_ROOT / \"models\" / \"whisper-ewe-gegbe-final\"\n",
+    "nllb_path = settings.PROJECT_ROOT / \"models\" / \"nllb-mina-ewe-final\"\n",
     "opus_path = settings.PROJECT_ROOT / \"models\" / \"opus-ewe-fr-local\"\n",
     "\n",
     "print(\"1. Chargement du modèle ASR local...\")\n",
@@ -328,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "cfed416a",
    "metadata": {},
    "outputs": [
@@ -347,7 +338,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:src.pipeline.translate_cascade:Source (Mina): Tɔhonɔ gblɔ na Mosè ku Arɔn be Izràɛlviwo\n"
+      "`generation_config` default values have been modified to match model-specific defaults: {'suppress_tokens': [], 'begin_suppress_tokens': [220, 50257]}. If this is not desired, please set these values explicitly.\n",
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "A custom logits processor of type <class 'transformers.generation.logits_process.SuppressTokensLogitsProcessor'> has been passed to `.generate()`, but it was also created in `.generate()`, given its parameterization. The custom <class 'transformers.generation.logits_process.SuppressTokensLogitsProcessor'> will take precedence. Please check the docstring of <class 'transformers.generation.logits_process.SuppressTokensLogitsProcessor'> to see related `.generate()` flags.\n",
+      "A custom logits processor of type <class 'transformers.generation.logits_process.SuppressTokensAtBeginLogitsProcessor'> has been passed to `.generate()`, but it was also created in `.generate()`, given its parameterization. The custom <class 'transformers.generation.logits_process.SuppressTokensAtBeginLogitsProcessor'> will take precedence. Please check the docstring of <class 'transformers.generation.logits_process.SuppressTokensAtBeginLogitsProcessor'> to see related `.generate()` flags.\n",
+      "INFO:src.pipeline.translate_cascade:Source (Mina):  So gɔ̃mè jèjejɛ, mawuxɔ ɖo jìŋùku sìku ànyigbã, àsi ŋua lè ènyà mà, eye be le gbalo. Viviti tritri pòxla gɔ̃mèjèjeje be àpùgbà jà vɔ̀a, mawuxɔ èvèawo be gbɔ̃gbɔ̃a ɖìnàsalè siwo ji. Mawuxɔ gblɔ̃ be: “Kɛ̃klɛ̃ ne va e mè, ne bèa nyi yebe àsi na yebe jìjimè.”\n"
      ]
     },
     {
@@ -356,7 +351,7 @@
      "text": [
       "\n",
       "Transcription (ASR) :\n",
-      " Gomejdejbehoma Eta tutu guan Hihiabe dodo So gomejdejbehma Mauro d'yunku siku aniban Aniwa leñamaa Eibeleqbalo Viviti tri tri porla gomejdejbea pubajah Va maubhe bongboa di nasa leciojis Maughe bongbi\n",
+      " So gɔ̃mè jèjejɛ, mawuxɔ ɖo jìŋùku sìku ànyigbã, àsi ŋua lè ènyà mà, eye be le gbalo. Viviti tritri pòxla gɔ̃mèjèjeje be àpùgbà jà vɔ̀a, mawuxɔ èvèawo be gbɔ̃gbɔ̃a ɖìnàsalè siwo ji. Mawuxɔ gblɔ̃ be: “Kɛ̃klɛ̃ ne va e mè, ne bèa nyi yebe àsi na yebe jìjimè.”\n",
       "\n"
      ]
     },
@@ -364,8 +359,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:src.pipeline.translate_cascade:Pivot (Ewe): Tɔhonɔ gblɔ na Mose kple Aron be woanye Israelviwo\n",
-      "INFO:src.pipeline.translate_cascade:Cible (Français): Moïse et Aaron ont reçu l'ordre d'être des Israélites.\n"
+      "INFO:src.pipeline.translate_cascade:Pivot (Ewe): Menye wòe nye Mawu ƒe aƒe la o, ke boŋ wòe nye Mawu ƒe aƒe la, afi si wòna gbɔgbɔ vɔ̃wo le.Menye wòe nye Mawu ƒe aƒe la o, elabe wòe nye Mawu ƒe aƒe la.Menye wòe nye Mawu ƒe aƒe la o, elabe wòe nye Mawu ƒe aƒe la.\n",
+      "INFO:src.pipeline.translate_cascade:Cible (Français): Tu es la maison de Dieu, non pas la maison de Dieu, mais celle des démons. Tu es la maison de Dieu; car tu es la maison de Dieu, et tu n'es pas la maison de Dieu, parce que tu es la maison de Dieu.\n"
      ]
     },
     {
@@ -373,9 +368,9 @@
      "output_type": "stream",
      "text": [
       "=== RÉSULTAT 100% LOCAL ===\n",
-      "TEXTE (ASR) : Tɔhonɔ gblɔ na Mosè ku Arɔn be Izràɛlviwo\n",
-      "PIVOT (EWE) : Tɔhonɔ gblɔ na Mose kple Aron be woanye Israelviwo\n",
-      "TRAD (FR)   : Moïse et Aaron ont reçu l'ordre d'être des Israélites.\n"
+      "TEXTE (ASR) :  So gɔ̃mè jèjejɛ, mawuxɔ ɖo jìŋùku sìku ànyigbã, àsi ŋua lè ènyà mà, eye be le gbalo. Viviti tritri pòxla gɔ̃mèjèjeje be àpùgbà jà vɔ̀a, mawuxɔ èvèawo be gbɔ̃gbɔ̃a ɖìnàsalè siwo ji. Mawuxɔ gblɔ̃ be: “Kɛ̃klɛ̃ ne va e mè, ne bèa nyi yebe àsi na yebe jìjimè.”\n",
+      "PIVOT (EWE) : Menye wòe nye Mawu ƒe aƒe la o, ke boŋ wòe nye Mawu ƒe aƒe la, afi si wòna gbɔgbɔ vɔ̃wo le.Menye wòe nye Mawu ƒe aƒe la o, elabe wòe nye Mawu ƒe aƒe la.Menye wòe nye Mawu ƒe aƒe la o, elabe wòe nye Mawu ƒe aƒe la.\n",
+      "TRAD (FR)   : Tu es la maison de Dieu, non pas la maison de Dieu, mais celle des démons. Tu es la maison de Dieu; car tu es la maison de Dieu, et tu n'es pas la maison de Dieu, parce que tu es la maison de Dieu.\n"
      ]
     }
    ],
@@ -450,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7f1d33a2",
    "metadata": {},
    "outputs": [
@@ -469,9 +464,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:src.pipeline.translate_cascade:Source (Mina):  Apitonila\n",
-      "INFO:src.pipeline.translate_cascade:Pivot (Ewe): Apitonila\n",
-      "INFO:src.pipeline.translate_cascade:Cible (Français): Aptonaila\n"
+      "INFO:src.pipeline.translate_cascade:Source (Mina):  Yosua va ɖo.\n",
+      "INFO:src.pipeline.translate_cascade:Pivot (Ewe): Yosua va.\n",
+      "INFO:src.pipeline.translate_cascade:Cible (Français): Josué arrive.\n"
      ]
     },
     {
@@ -479,9 +474,9 @@
      "output_type": "stream",
      "text": [
       "=== RÉSULTAT 100% LOCAL (MICRO) ===\n",
-      "TEXTE (ASR) :  Apitonila\n",
-      "PIVOT (EWE) : Apitonila\n",
-      "TRAD (FR)   : Aptonaila\n"
+      "TEXTE (ASR) :  Yosua va ɖo.\n",
+      "PIVOT (EWE) : Yosua va.\n",
+      "TRAD (FR)   : Josué arrive.\n"
      ]
     }
    ],
